# st25tb_kameleon_piko

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build.sh  clean.sh  config.h  flash.cmd  flash.sh  flash_win.sh  memmap_2M_reserved.ld  st25tb_kameleon_piko.c
.github/workflows/: simple_build.yml
kameleon/: board.c  board.h  buttons.c  buttons.h  leds.c  leds.h  modes.h  references.h  slots.c  slots.h  slots_fixed_content.h  trf7970a.c  trf7970a.h
kameleon/modes/: detect.c  emulate.c  learn.c  rewrite.c  select.c  tear.c  unk.c
kameleon/st25tb/: st25tb.c  st25tb.h  st25tb_initiator.c  st25tb_initiator.h  st25tb_target.c  st25tb_target.h  st25tb_utils.c  st25tb_utils.h
